--- a/src/pages/event-capture/event-capture.html
+++ b/src/pages/event-capture/event-capture.html
@@ -16,27 +16,21 @@
 <ion-content >
   <ion-grid>
     <ion-row>
-      <div class="item-card" color="font-color" ion-button clear full text-center text-capitalize (tap)="openOrganisationUnitTree()" >
-        <img  class="side-menu-icon" [src]="icons.orgUnit"/>&nbsp;&nbsp;
-        {{ organisationUnitLabel }}
-      </div>
-
-      <div *ngIf="programLoading" class="item-card" color="font-color" ion-button clear full text-center text-capitalize >
-        <page-loading loadingSize="small"></page-loading>
-      </div>
-      <div *ngIf="!programLoading" class="item-card" color="font-color" ion-button clear full text-center text-capitalize (tap)="openProgramList()" >
-        <img  class="side-menu-icon" [src]="icons.program"/>&nbsp;&nbsp;
-        {{ programLabel }}
-      </div>
-
-
-      <div *ngIf="hasOptions" class="item-card" color="font-color" ion-button clear full text-center text-capitalize (tap)="openProgramCategoryOptions()" >
-        <img  class="side-menu-icon" [src]="icons.categoryOptions"/>&nbsp;&nbsp;
-        {{CategoryOptionLabel}}
-      </div>
-
+      <ion-col>
+        <div class="item-card" color="font-color" padding-top padding-bottom ion-button clear full text-center text-capitalize (tap)="openOrganisationUnitTree()" >
+          <img  class="side-menu-icon" [src]="icons.orgUnit"/>&nbsp;&nbsp;
+          {{ organisationUnitLabel }}
+        </div>
+        <div class="item-card" color="font-color" padding-top padding-bottom ion-button clear full text-center text-capitalize (tap)="openProgramList()" >
+          <img  class="side-menu-icon" [src]="icons.program"/>&nbsp;&nbsp;
+          {{ programLabel }}
+        </div>
+      </ion-col>
     </ion-row>
 
+    <div *ngIf = "isFormReady">
+      isFormReady : {{ isFormReady }}
+    </div>
   </ion-grid>
 
 
