Get program category options based on selected program

--- a/src/pages/event-capture/event-capture.html
+++ b/src/pages/event-capture/event-capture.html
@@ -30,7 +30,9 @@
 
     <div *ngIf = "isFormReady">
       isFormReady : {{ isFormReady }}
+
     </div>
+    {{ programCategoryCombo |json }}
   </ion-grid>
 
 
