--- a/src/pages/event-capture/event-capture.html
+++ b/src/pages/event-capture/event-capture.html
@@ -25,14 +25,29 @@
           <img  class="side-menu-icon" [src]="icons.program"/>&nbsp;&nbsp;
           {{ programLabel }}
         </div>
+        <div *ngIf="programCategoryCombo && programCategoryCombo.id ">
+          <div *ngIf="isProgramDimensionApplicable">
+            <div *ngFor="let category of programCategoryCombo.categories;let categoryIndex = index">
+              <div (tap)="openDataDimensionSelection(category)" padding-top padding-bottom class="item-card" color="font-color" full text-center text-wrap  >
+                <div style="padding-bottom: 5px;"><b>{{ category.name }}</b></div>
+                <div *ngIf="selectedDataDimension[categoryIndex]">{{ selectedDataDimension[categoryIndex].name }}</div>
+                <div *ngIf="!selectedDataDimension[categoryIndex]">Touch to select option</div>
+              </div>
+            </div>
+          </div>
+          <div class="item-card" padding-top padding-bottom *ngIf="!isProgramDimensionApplicable">
+            <warning [warningMessage]="programDimensionNotApplicableMessage" ></warning>
+          </div>
+        </div>
+
+
       </ion-col>
     </ion-row>
 
     <div *ngIf = "isFormReady">
-      isFormReady : {{ isFormReady }}
-
+      isFormReady : {{ isFormReady }}<br>
+      getDataDimensions : {{ getDataDimensions()|json }}
     </div>
-    {{ programCategoryCombo |json }}
   </ion-grid>
 
 
