--- a/src/pages/tracker-entity-register/tracker-entity-register.html
+++ b/src/pages/tracker-entity-register/tracker-entity-register.html
@@ -13,11 +13,65 @@
 
 <ion-content >
   <ion-grid>
-    <ion-row>
-      <ion-col>
-        {{ currentOrganisationUnit|json }}<br><br>
-        {{ currentProgram |json }}
-      </ion-col>
-    </ion-row>
+    <div *ngIf="isLoading">
+      <page-loading [loadingMessage]="loadingMessage" [loadingSize]="'large'"></page-loading>
+    </div>
+    <div *ngIf="!isLoading">
+      <div class="item-card" *ngFor="let content of registrationContents">
+
+        <ion-row (tap)="toggleRegistrationContents(content)">
+          <ion-col col-11>
+            <!--<img  class="side-menu-icon" [src]="aboutContent.icon"/>&nbsp;&nbsp;-->
+            <span ion-text [color]="(isRegistrationContentOpen[content.id]) ?'current' : 'font-color'">
+              {{ content.name }}
+            </span>
+          </ion-col>
+          <ion-col col-1 item >
+            <div style="text-align: center;">
+              <ion-icon [color]="(isRegistrationContentOpen[content.id]) ?'current' : 'font-color'" *ngIf="!(isRegistrationContentOpen[content.id])" name="ios-arrow-down" item-right></ion-icon>
+              <ion-icon [color]="(isRegistrationContentOpen[content.id]) ?'current' : 'font-color'" *ngIf="(isRegistrationContentOpen[content.id])" name="ios-arrow-up" item-right></ion-icon>
+            </div>
+          </ion-col>
+        </ion-row>
+        <div *ngIf="(isRegistrationContentOpen[content.id])" >
+          <hr>
+          <div *ngIf="content.id == 'enrollment'">
+            <div class="inputLabel">
+              Enrolling organisation unit
+            </div>
+            <div class="input-field-container">
+              <ion-item>
+                <ion-input [(ngModel)]="currentOrganisationUnit.name" readonly="true"></ion-input>
+              </ion-item>
+            </div>
+            <div class="inputLabel">
+              {{ currentProgram.enrollmentDateLabel}}
+            </div>
+            <div class="input-field-container">
+              <ion-item>
+                <ion-datetime [(ngModel)]="enrollmentDate" doneText="Update" displayFormat="YYYY-MM-DD" pickerFormat="YYYY MM DD" ></ion-datetime>
+              </ion-item>
+            </div>
+            <div class="inputLabel">
+              {{ currentProgram.incidentDateLabel}}
+            </div>
+            <div class="input-field-container">
+              <ion-item>
+                <ion-datetime [(ngModel)]="incidentDate" doneText="Update" displayFormat="YYYY-MM-DD" pickerFormat="YYYY MM DD" ></ion-datetime>
+              </ion-item>
+            </div>
+          </div>
+          <div *ngIf="content.id == 'profile'">
+            enrollmentDate : {{ enrollmentDate }}<br>
+            incidentDate : {{ incidentDate }}
+            <br><br>
+            {{ programTrackedEntityAttributes|json }}
+          </div>
+        </div>
+      </div>
+
+
+
+    </div>
   </ion-grid>
 </ion-content>
