Adding required fields on tracked entity registration

--- a/src/pages/tracker-entity-register/tracker-entity-register.html
+++ b/src/pages/tracker-entity-register/tracker-entity-register.html
@@ -66,6 +66,7 @@
                 <tracked-entity-inputs [trackedEntityAttribute]="programTrackedEntityAttribute.trackedEntityAttribute"
                                        [currentUser]="currentUser"
                                        [data]="dataObject"
+                                       [mandatory]="programTrackedEntityAttribute.mandatory"
                                        (onChange)="updateData($event)"></tracked-entity-inputs>
               </div>
             </div>
