--- a/src/pages/tracker-capture/tracker-capture.html
+++ b/src/pages/tracker-capture/tracker-capture.html
@@ -34,8 +34,8 @@
       <ion-fab bottom right #fab>
         <button ion-fab ><ion-icon name="md-more"  ></ion-icon></button>
         <ion-fab-list side="top">
-          <button ion-fab color="primary"><ion-icon name="ios-eye" (click)="hideAndShowColumns(fab)" ></ion-icon></button>
-          <button ion-fab color="primary"><ion-icon name="add"  (click)="registerNewTrackedEntity(fab)"></ion-icon></button>
+          <button ion-fab (click)="hideAndShowColumns(fab)" color="primary"><ion-icon name="ios-eye" ></ion-icon></button>
+          <button ion-fab (click)="registerNewTrackedEntity(fab)" color="primary"><ion-icon name="add" ></ion-icon></button>
         </ion-fab-list>
       </ion-fab>
     </div>
