Loading saved registration details

--- a/src/pages/tracker-capture/tracker-capture.html
+++ b/src/pages/tracker-capture/tracker-capture.html
@@ -32,7 +32,7 @@
         <page-loading [loadingSize]="'large'" [loadingMessage]="loadingMessage" ></page-loading>
       </div>
 
-      {{ trackedEntityInstances |json }}
+      {{ trackedEntityInstances.trackedEntityInstances |json }}
 
       <ion-fab bottom right #fab>
         <button ion-fab ><ion-icon name="md-more"  ></ion-icon></button>
