Reverse list of tracked entity instances

--- a/src/pages/tracker-capture/tracker-capture.html
+++ b/src/pages/tracker-capture/tracker-capture.html
@@ -31,8 +31,9 @@
       <div *ngIf="isLoading">
         <page-loading [loadingSize]="'large'" [loadingMessage]="loadingMessage" ></page-loading>
       </div>
-
-      {{ trackedEntityInstances.trackedEntityInstances |json }}
+      <div *ngIf="!isLoading">
+        {{ trackedEntityInstances |json }}
+      </div>
 
       <ion-fab bottom right #fab>
         <button ion-fab ><ion-icon name="md-more"  ></ion-icon></button>
