--- a/src/pages/tracker-capture/tracker-capture.html
+++ b/src/pages/tracker-capture/tracker-capture.html
@@ -32,16 +32,21 @@
         <page-loading [loadingSize]="'large'" [loadingMessage]="loadingMessage" ></page-loading>
       </div>
       <div *ngIf="!isLoading">
-        {{ trackedEntityInstances |json }}
+        {{ trackedEntityInstances |json }}<br><br>
+        {{ programTrackedEntityAttributes | json }}
       </div>
 
-      <ion-fab bottom right #fab>
-        <button ion-fab ><ion-icon name="md-more"  ></ion-icon></button>
-        <ion-fab-list side="top">
-          <button ion-fab (click)="hideAndShowColumns(fab)" color="primary"><ion-icon name="ios-eye" ></ion-icon></button>
-          <button ion-fab (click)="registerNewTrackedEntity(fab)" color="primary"><ion-icon name="add" ></ion-icon></button>
-        </ion-fab-list>
-      </ion-fab>
+
     </div>
   </ion-grid>
 </ion-content>
+
+<ion-footer>
+  <ion-fab bottom right #fab>
+    <button ion-fab ><ion-icon name="md-more"  ></ion-icon></button>
+    <ion-fab-list side="top">
+      <button ion-fab (click)="hideAndShowColumns(fab)" color="primary"><ion-icon name="ios-eye" ></ion-icon></button>
+      <button ion-fab (click)="registerNewTrackedEntity(fab)" color="primary"><ion-icon name="add" ></ion-icon></button>
+    </ion-fab-list>
+  </ion-fab>
+</ion-footer>
