Fixing fetching programstages with data element objects

--- a/src/pages/event-capture-form/event-capture-form.html
+++ b/src/pages/event-capture-form/event-capture-form.html
@@ -44,6 +44,9 @@
       </button>
 
 
+      {{ programStage |json }}
+
+
 
       <!--<div *ngFor="let programStage of displayTag.dataElements" >-->
         <!--{{programStage.name}}-->
