Implement hide and show headers on tracker

--- a/src/pages/tracker-capture/tracker-capture.html
+++ b/src/pages/tracker-capture/tracker-capture.html
@@ -32,8 +32,8 @@
         <page-loading [loadingSize]="'large'" [loadingMessage]="loadingMessage" ></page-loading>
       </div>
       <div *ngIf="!isLoading">
-        {{ trackedEntityInstances |json }}<br><br>
-        {{ programTrackedEntityAttributes | json }}
+        attributeToDisplay : {{ attributeToDisplay | json }}<br><br>
+        trackedEntityInstances : {{ trackedEntityInstances |json }}
       </div>
 
 
