--- a/src/pages/tracker-capture/tracker-capture.html
+++ b/src/pages/tracker-capture/tracker-capture.html
@@ -28,6 +28,18 @@
     </ion-row>
 
     <div *ngIf = "isFormReady">
+      <div >
+        <div class="item-card" (click)="hideAndShowColumns()" color="font-color" padding-top padding-bottom ion-button clear text-center text-capitalize icon-start>
+          <ion-icon name="ios-eye" color="icon-color"></ion-icon>
+          Columns
+        </div>
+        <div class="item-card" (click)="registerNewTrackedEntity()" color="font-color" padding-top padding-bottom ion-button clear text-center text-capitalize icon-start>
+          <ion-icon name="add" color="icon-color"></ion-icon>
+          Add
+        </div>
+      </div>
+
+
       <div *ngIf="isLoading">
         <page-loading [loadingSize]="'large'" [loadingMessage]="loadingMessage" ></page-loading>
       </div>
@@ -41,12 +53,12 @@
   </ion-grid>
 </ion-content>
 
-<ion-footer>
-  <ion-fab bottom right #fab>
-    <button ion-fab ><ion-icon name="md-more"  ></ion-icon></button>
-    <ion-fab-list side="top">
-      <button ion-fab (click)="hideAndShowColumns(fab)" color="primary"><ion-icon name="ios-eye" ></ion-icon></button>
-      <button ion-fab (click)="registerNewTrackedEntity(fab)" color="primary"><ion-icon name="add" ></ion-icon></button>
-    </ion-fab-list>
-  </ion-fab>
-</ion-footer>
+<!--<ion-footer>-->
+  <!--<ion-fab bottom right #fab>-->
+    <!--<button ion-fab ><ion-icon name="md-more"  ></ion-icon></button>-->
+    <!--<ion-fab-list side="top">-->
+      <!--<button ion-fab (click)="hideAndShowColumns(fab)" color="primary"><ion-icon name="ios-eye" ></ion-icon></button>-->
+      <!--<button ion-fab (click)="registerNewTrackedEntity(fab)" color="primary"><ion-icon name="add" ></ion-icon></button>-->
+    <!--</ion-fab-list>-->
+  <!--</ion-fab>-->
+<!--</ion-footer>-->
