--- a/src/pages/tracker-capture/tracker-capture.html
+++ b/src/pages/tracker-capture/tracker-capture.html
@@ -43,7 +43,22 @@
         <page-loading [loadingSize]="'large'" [loadingMessage]="loadingMessage" ></page-loading>
       </div>
       <div *ngIf="!isLoading">
-        tableLayout :: {{ tableLayout|json }}
+        <div *ngIf="tableLayout">
+          <table class="table table-bordered" width="100%" >
+            <thead *ngIf="tableLayout && tableLayout.headers">
+              <tr >
+                <th *ngFor="let header of tableLayout.headers" >{{ header}}</th>
+              </tr>
+            </thead>
+            <tbody *ngIf="tableLayout.rows">
+              <tr *ngFor="let row of tableLayout.rows">
+                <td *ngFor="let data of row">
+                  {{ data }}
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
       </div>
 
 
