--- a/src/pages/tracker-capture/tracker-capture.html
+++ b/src/pages/tracker-capture/tracker-capture.html
@@ -38,30 +38,36 @@
     </ion-row>
 
     <div *ngIf = "isFormReady" >
-
       <div *ngIf="isLoading">
         <page-loading [loadingSize]="'large'" [loadingMessage]="loadingMessage" ></page-loading>
       </div>
       <div *ngIf="!isLoading">
-        <div *ngIf="tableLayout">
-          <table class="table table-bordered" width="100%" >
-            <thead *ngIf="tableLayout && tableLayout.headers">
-              <tr >
-                <th *ngFor="let header of tableLayout.headers" >{{ header}}</th>
-              </tr>
-            </thead>
-            <tbody *ngIf="tableLayout.rows">
-              <tr *ngFor="let row of tableLayout.rows">
-                <td *ngFor="let data of row">
-                  {{ data }}
-                </td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
+        <ion-row>
+          <ion-col>
+            <div *ngIf="tableLayout">
+              <table class="table table-bordered" width="100%" >
+                <thead *ngIf="tableLayout && tableLayout.headers">
+                <tr >
+                  <th *ngFor="let header of tableLayout.headers" >{{ header}}</th>
+                </tr>
+                </thead>
+                <tbody *ngIf="tableLayout.rows">
+                <tr *ngFor="let row of tableLayout.rows;let currentIndex = index" (click)="openTrackedEntityDashboard(currentIndex)">
+                  <td *ngFor="let data of row">
+                    {{ data }}
+                  </td>
+                </tr>
+                <tr *ngIf="tableLayout.rows.length == 0">
+                  <td colspan="100%">
+                    There no data at the moment
+                  </td>
+                </tr>
+                </tbody>
+              </table>
+            </div>
+          </ion-col>
+        </ion-row>
       </div>
-
-
     </div>
   </ion-grid>
 </ion-content>
