--- a/src/pages/data-entry/data-entry.html
+++ b/src/pages/data-entry/data-entry.html
@@ -35,7 +35,7 @@
         <div *ngIf="selectedPeriod && selectedPeriod.iso && dataSetCategoryCombo && dataSetCategoryCombo.id ">
           <div *ngIf="isDataSetDimensionApplicable">
             <div *ngFor="let category of dataSetCategoryCombo.categories;let categoryIndex = index">
-              <div (tap)="openDataDimensionSelection(category)" padding-top padding-bottom class="item-card" color="font-color" full text-center text-wrap  >
+              <div (tap)="openDataDimensionSelection(category)" class="item-card-category" color="font-color" full text-center text-wrap  >
                 <div style="padding-bottom: 5px;"><b>{{ category.name }}</b></div>
                 <div *ngIf="selectedDataDimension[categoryIndex]">{{ selectedDataDimension[categoryIndex].name }}</div>
                 <div *ngIf="!selectedDataDimension[categoryIndex]">Touch to select option</div>
