--- a/src/pages/tracked-entity-dashboard/tracked-entity-dashboard.html
+++ b/src/pages/tracked-entity-dashboard/tracked-entity-dashboard.html
@@ -19,22 +19,32 @@
       <page-loading [loadingMessage]="loadingMessage" [loadingSize]="'large'" ></page-loading>
     </div>
     <div *ngIf="!isLoading">
+      {{ trackedEntityInstance|json }}<br><br>
+
       <div *ngFor="let widget of dashboardWidgets">
         <div *ngIf="(isDashboardWidgetOpen[widget.id])" >
           <ion-row>
             <ion-col>
-              <span ion-text ><b>{{ widget.name}}</b></span>
+              <span ion-text text-capitalize><b>{{ widget.name}}</b></span>
             </ion-col>
           </ion-row>
           <ion-row>
             <ion-col>
               <div *ngIf="widget.id == 'enrollment'"  >
                 <div class="inputLabel">
-                  Enrolling organisation unit
+                  organisation unit
                 </div>
                 <div class="input-field-container">
                   <ion-item>
-                    <ion-input [(ngModel)]="currentOrganisationUnit.name" readonly="true"></ion-input>
+                    <ion-input [(ngModel)]="currentOrgUnit.name" readonly="true"></ion-input>
+                  </ion-item>
+                </div>
+                <div class="inputLabel">
+                  Program
+                </div>
+                <div class="input-field-container">
+                  <ion-item>
+                    <ion-input [(ngModel)]="currentProgram.name" readonly="true"></ion-input>
                   </ion-item>
                 </div>
               </div>
@@ -50,31 +60,29 @@
                 </div>
               </div>
 
-              <div *ngFor="let programStage of programStages">
-                <div *ngIf="widget.id == programStage.id">
-                  {{ programStage|json }}
+              <div *ngIf="programStages && programStages.length > 0">
+                <div *ngFor="let programStage of programStages">
+                  <div *ngIf="widget.id == programStage.id">
+                    {{ programStage|json }}
+                  </div>
                 </div>
               </div>
             </ion-col>
           </ion-row>
         </div>
       </div>
-
-
     </div>
   </ion-grid>
 
 </ion-content>
 <ion-footer>
   <div >
-    <div *ngIf="!isLoading">
-      <div ion-button clear text-capitalize *ngFor="let widget of dashboardWidgets" (tap)="changeDashboardWidget(widget)">
-        <div *ngIf="widget.icon">
-          <img  class="side-menu-icon" [src]="widget.icon"/>&nbsp;&nbsp;
-        </div>
-        <div *ngIf="widget.iconName">
-          <b>{{ widget.iconName }}</b>
-        </div>
+    <div ion-button clear text-capitalize *ngFor="let widget of dashboardWidgets" (tap)="changeDashboardWidget(widget)">
+      <div *ngIf="widget.icon">
+        <img  class="side-menu-icon" [src]="widget.icon"/>&nbsp;&nbsp;
+      </div>
+      <div *ngIf="widget.iconName">
+        <b>{{ widget.iconName }}</b>
       </div>
     </div>
   </div>
