--- a/src/pages/tracked-entity-dashboard/tracked-entity-dashboard.html
+++ b/src/pages/tracked-entity-dashboard/tracked-entity-dashboard.html
@@ -74,14 +74,15 @@
 
 </ion-content>
 <ion-footer>
-  <div >
+  <ion-toolbar>
     <div ion-button clear text-capitalize *ngFor="let widget of dashboardWidgets" (tap)="changeDashboardWidget(widget)">
       <div *ngIf="widget.icon">
-        <img  class="side-menu-icon" [src]="widget.icon"/>&nbsp;&nbsp;
+        <img  class="footer-icon" [src]="widget.icon"/>&nbsp;&nbsp;
       </div>
       <div *ngIf="widget.iconName">
         <b>{{ widget.iconName }}</b>
       </div>
     </div>
-  </div>
+  </ion-toolbar>
+
 </ion-footer>
